# performance-metrics-engine

./: .gitignore  Makefile  README.md  pyproject.toml  strava_api_limits.md
.github/: pull_request_template.md
docs/: architecture.md  classes.md  metrics_definitions.md
notebooks/: 1_api_exploration.ipynb  2_fitness_exploration.ipynb  3_power_analysis.ipynb
src/: __init__.py  auth_helper.py  config.py  dashboard.py  main.py  status.py  strava_client.py
src/api/: auth_setup.py  strava.py
src/core/: analytics.py  athlete.py  pmc.py
src/services/: coach.py  sync.py
